xi ha quan data

--- a/res/layout/info_detail_view.xml
+++ b/res/layout/info_detail_view.xml
@@ -136,172 +136,13 @@
             </LinearLayout>
             <LinearLayout
                 android:layout_width="fill_parent"
-                android:layout_height="210dp"
-                android:orientation="vertical"
-                android:background="@drawable/img_banner"
-                >
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginTop="12dp"
-                    android:layout_marginLeft="18dp"
-                    >
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="24dp"
-                        android:text="#奇格首发"
-                        android:textSize="12dp"
-                        android:background="@drawable/tip_bg"
-                        android:gravity="center"
-                        android:paddingLeft="10dp"
-                        android:paddingRight="10dp"
-                        >
-                    </TextView>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="24dp"
-                        android:text="#嘻哈网红MV"
-                        android:textSize="12dp"
-                        android:layout_marginLeft="5dp"
-                        android:background="@drawable/tip_bg"
-                        android:gravity="center"
-                        android:paddingLeft="10dp"
-                        android:paddingRight="10dp"
-                        >
-                    </TextView>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="24dp"
-                        android:text="DJ Jennies"
-                        android:textSize="12dp"
-                        android:layout_marginLeft="5dp"
-                        android:background="@drawable/tip_bg"
-                        android:gravity="center"
-                        android:paddingLeft="10dp"
-                        android:paddingRight="10dp"
-                        >
-                    </TextView>
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent"
-                    android:layout_weight="1"
-                    >
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:background="@drawable/banner_bg"
-                    >
-                    <LinearLayout
-                        android:layout_width="fill_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:layout_marginLeft="11dp"
-                        android:layout_marginRight="11dp"
-                        >
-                        <TextView
-                            android:id="@+id/title"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="☆HIPHOP MV全城热恋《Love it》震撼发布！☆"
-                            android:textSize="14dp"
-                            android:textColor="@color/white"
-                            android:gravity="left"
-                            >
-                        </TextView>
-                    </LinearLayout>
-                    <LinearLayout
-                        android:layout_width="fill_parent"
-                        android:layout_height="38dp"
-                        android:orientation="horizontal"
-                        android:layout_gravity="center"
-                        android:layout_marginLeft="28dp"
-                        >
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="fill_parent"
-                            android:orientation="horizontal"
-                            android:background="@color/transparent"
-                            android:layout_gravity="center"
-                            android:layout_marginRight="14dp"
-                            > 
-                            <ImageView
-                                android:layout_width="wrap_content"
-                                android:layout_height="fill_parent"
-                                android:layout_gravity="center"
-                                android:src="@drawable/read"
-                                android:background="@color/transparent"
-                                android:layout_marginRight="5dp"
-                                /> 
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="fill_parent"
-                                android:id="@+id/read_count"
-                                android:gravity="center"
-                                android:text="8642"
-                                android:textColor="@color/white"
-                                /> 
-                        </LinearLayout>
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="fill_parent"
-                            android:orientation="horizontal"
-                            android:background="@color/transparent"
-                            android:gravity="center"
-                            android:layout_marginRight="14dp"
-                            > 
-                            <ImageView
-                                android:layout_width="wrap_content"
-                                android:layout_height="fill_parent"
-                                android:layout_gravity="center"
-                                android:src="@drawable/clock"
-                                android:background="@color/transparent"
-                                android:layout_marginRight="5dp"
-                                /> 
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="fill_parent"
-                                android:gravity="center"
-                                android:text="2天前"
-                                android:textColor="@color/white"
-                                /> 
-                        </LinearLayout>
-                    </LinearLayout>
-                </LinearLayout>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
                 >
-                <TextView
-                    android:id="@+id/content"
-                    android:layout_width="wrap_content"
+                <WebView
+                    android:id="@+id/web_view"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
-                    >
-                </TextView>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="340dp"
-                android:layout_height="160dp"
-                android:orientation="vertical"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:background="@drawable/img_video"
-                >
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/video"
-                    >
-                </ImageView>
+                    />
             </LinearLayout>
             <!-- 点赞的头像区 -->
             <LinearLayout
