--- a/res/values/color.xml
+++ b/res/values/color.xml
@@ -6,4 +6,5 @@
   <color name="red">#FF0000</color>
   <color name="gray">#7D7D7D</color>
   <color name="title_red">#CD493D</color>
+  <color name="half_transparent">#90FFFFFF</color>
 </resources>
