--- a/res/values/color.xml
+++ b/res/values/color.xml
@@ -7,4 +7,5 @@
   <color name="gray">#7D7D7D</color>
   <color name="title_red">#CD493D</color>
   <color name="half_transparent">#90FFFFFF</color>
+  <color name="login_view_title">#FEC72E</color>
 </resources>
